$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.88 2005/03/09 14:41:00 tom Exp $

Change log file for Exim from version 4.21
-------------------------------------------


Exim version 4.51
-----------------

TK/01. Added Yahoo DomainKeys support via libdomainkeys. See
       doc/experimental-spec.txt for details. (http://domainkeys.sf.net)

TK/02. Fix ACL "control" statment not being available in MIME ACL.

TK/03. Fix ACL "regex" condition not being available in MIME ACL.

PH/01. Installed a patch from the Sieve maintainer that allows -bf to be used
       to test Sieve filters that use "vacation".

PH/02. Installed a slightly modified version of Nikos Mavrogiannopoulos' patch
       that changes the way the GnuTLS parameters are stored in the cache file.
       The new format can be generated externally. For backward compatibility,
       if the data in the cache doesn't make sense, Exim assumes it has read an
       old-format file, and it generates new data and writes a new file. This
       means that you can't go back to an older release without removing the
       file.


A note about Exim versions 4.44 and 4.50
----------------------------------------

Exim 4.50 was meant to be the next release after 4.43. It contains a lot of
changes of various kinds. As a consequence, a big documentation update was
needed. This delayed the release for rather longer than seemed good, especially
in the light of a couple of (minor) security issues. Therefore, the changes
that fixed bugs were backported into 4.43, to create a 4.44 maintenance
release. So 4.44 and 4.50 are in effect two different branches that both start
from 4.43.

I have left the 4.50 change log unchanged; it contains all the changes since
4.43. The change log for 4.44 is below; many of its items are identical to
those for 4.50. This seems to be the most sensible way to preserve the
historical information.


Exim version 4.50
-----------------

 1. Minor wording change to the doc/README.SIEVE file.
